# techxchange2025-lab3640-docling

./: .gitignore  README.md  pyproject.toml  start.sh
notebooks/: Lab0_Test_setup.ipynb  Lab1_Docling_convert.ipynb  Lab3_Agents.ipynb
scripts/: expand_lvs.sh
setup/: enable_port_forwarding.sh  env.secrets.example  expand_lvs.sh  install_deps.sh  lab_init.sh  litellm_config.yaml  setup.sh  start_docling_mcp.sh  start_jupyter.sh
